Admin Category and User Category pages template crefted js changes cart changes

--- a/PCHUBStore/Areas/Administration/Views/Blacksmith/EditUserCategoryPage.cshtml
+++ b/PCHUBStore/Areas/Administration/Views/Blacksmith/EditUserCategoryPage.cshtml
@@ -6,30 +6,22 @@
 
 
 <div class="container bg-gradient-primary" style="background-color: black; margin-top: 3em">
-
     <h1 class="text-center" style="color: white">Edit User Category Page</h1>
-
 </div>
 
 <div class="container text-center" style="margin-top: 3em">
     <div class="row" style="font-size: 25px">
         <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Add Box</a>
+            <a asp-area="Administration" asp-controller="Categories" asp-action="AddBox" style="color: white">Add Box</a>
+        </div>         
+        <div class="col-2 m-1 bg-gradient-primary">
+            <a asp-area="Administration" asp-controller="Categories" asp-action="EditBoxes" style="color: white">Edit Box</a>
         </div>
         <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Edit Box</a>
+            <a asp-area="Administration" asp-controller="Categories" asp-action="CreateCategoryPage" style="color: white">Create Category Page</a>
         </div>
         <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Add Category</a>
-        </div>
-        <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Add Items Category</a>
-        </div>
-        <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Create Category Page</a>
-        </div>
-        <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Edit Category</a>
+            <a href="" style="color: white">Edit Category Page</a>
         </div>
     </div>
 </div>
