Admin profile created index js edited and adminLayout Identity not allowing authenticated users to go to login or register page create new admin account edit category page create category page user index page edited and blacksmith controller additional functionality

--- a/PCHUBStore/Areas/Administration/Views/Blacksmith/EditUserCategoryPage.cshtml
+++ b/PCHUBStore/Areas/Administration/Views/Blacksmith/EditUserCategoryPage.cshtml
@@ -21,7 +21,7 @@
             <a asp-area="Administration" asp-controller="Categories" asp-action="CreateCategoryPage" style="color: white">Create Category Page</a>
         </div>
         <div class="col-2 m-1 bg-gradient-primary">
-            <a href="" style="color: white">Edit Category Page</a>
+            <a asp-area="Administration" asp-controller="Categories" asp-action="EditCategoryPage" style="color: white">Edit Category Page</a>
         </div>
     </div>
 </div>
