--- a/PCHUBStore/Areas/Administration/Views/Partials/_IndexPartial.cshtml
+++ b/PCHUBStore/Areas/Administration/Views/Partials/_IndexPartial.cshtml
@@ -21,7 +21,7 @@
                 <a asp-area="Administration" asp-controller="Filters" asp-action="CreateFilterCategory" style="color: white">Create New Filter Category</a>
             </div>
             <div class="col-3 border-left bg-gradient-primary">
-                <a href="" style="color: white">Create New Admin Account</a>
+                <a asp-area="Administration" asp-controller="Blacksmith" asp-action="CreateAdminAccount" style="color: white">Create New Admin Account</a>
             </div>
             <div class="col-3 border-left bg-gradient-primary">
                 <a href="" style="color: white">Create New Worker Account</a>
