--- a/PCHUBStore/Views/Categories/Category.cshtml
+++ b/PCHUBStore/Views/Categories/Category.cshtml
@@ -28,8 +28,14 @@
     }
 
 </div>
-<div class="text-center bg-white mb-2">
-    <img src="@Model.PageCategory.Picture" alt="Alternate Text" />
+<div class="bg-white mb-2">
+    <div class="row">
+        <div class="col-lg-4"></div>
+        <div class="col-lg-4 col-sm-6 text-center">
+            <img src="@Model.PageCategory.Picture" style="width: inherit; height: inherit" alt="Alternate Text" />
+        </div>
+        <div class="col-lg-4"></div>
+    </div>
 </div>
 
 
