--- a/PCHUBStore/Views/Home/Index.cshtml
+++ b/PCHUBStore/Views/Home/Index.cshtml
@@ -19,27 +19,27 @@
                     <div class="sidebar-brand-icon ">
                         <img src="~/img/controlPanelLogo.png" width="25px" height="25px" alt="Alternate Text" />
                     </div>
-                    <div class="mx-3">Panel</div>
+                    <div style="color: white" class="mx-3">Panel</div>
                 </a>
 
                 <!-- Divider -->
                 <hr class="sidebar-divider my-0">
 
                 <!-- Nav Item -
-                -->
+    -->
                 <hr class="sidebar-divider">
 
-                <a class="sidebar-brand d-flex align-items-center justify-content-center" style="cursor:pointer">
+                <a class="sidebar-brand d-flex align-items-center justify-content-center">
                     <div class="sidebar-brand-icon">
                         <img src="~/img/list.png" width="25px" height="25px" alt="Alternate Text" />
                     </div>
-                    <div style="font-size: xx-large;" class="mx-3">Categories</div>
+                    <div style="font-size: xx-large; color: white" class="mx-3">Categories</div>
                 </a>
                 <!-- Divider -->
                 <hr class="sidebar-divider">
 
                 <!-- Heading -->
-                <div class="sidebar-heading">
+                <div style="color: white" class="sidebar-heading">
                     Options
                 </div>
 
@@ -47,37 +47,36 @@
 
                 <hr class="sidebar-divider">
 
-                <a class="sidebar-brand d-flex align-items-center" style="cursor:pointer">
+                <a class="sidebar-brand d-flex align-items-center" href="/Category/Laptops">
                     <img src="~/img/laptop.png" width="50px" height="50px" alt="Alternate Text" />
                     <span style="font-size: xx-large;">Laptops</span>
                 </a>
 
                 <hr class="sidebar-divider">
                 <!-- Nav Item - Utilities Collapse Menu -->
-                <a class="sidebar-brand d-flex align-items-center" style="cursor:pointer">
+                <a class="sidebar-brand d-flex align-items-center" href="/Category/Monitors">
                     <img src="~/img/monitor.png" width="50px" height="50px" alt="Alternate Text" />
                     <span style="font-size: xx-large;">Monitors</span>
                 </a>
                 <hr class="sidebar-divider">
-                <a class="sidebar-brand d-flex align-items-center" style="cursor:pointer">
+                <a class="sidebar-brand d-flex align-items-center" href="/Category/Keyboards">
                     <img src="~/img/keyboard.png" width="50px" height="50px" alt="Alternate Text" />
                     <span style="font-size: xx-large;">Keyboards</span>
                 </a>
 
                 <hr class="sidebar-divider">
-                <a class="sidebar-brand d-flex align-items-center" style="cursor:pointer">
+                <a class="sidebar-brand d-flex align-items-center" href="/Category/Mice">
+                    <img src="~/img/icons8-rat-64.png" width="50px" height="50px" alt="Alternate Text" />
+                    <span style="font-size: xx-large;">Mice</span>
+                </a>
+
+                <hr class="sidebar-divider">
+                <a class="sidebar-brand d-flex align-items-center" href="/Category/Computers">
                     <img src="~/img/computer.png" width="50px" height="50px" alt="Alternate Text" />
                     <span style="font-size: xx-large;">Computers - PC</span>
                 </a>
 
-                <hr class="sidebar-divider">
 
-                <a class="sidebar-brand d-flex align-items-center justify-content-center" style="cursor:pointer">
-                    <div class="sidebar-brand-icon">
-                        <img src="~/img/more.png" width="25px" height="25px" alt="Alternate Text" />
-                    </div>
-                    <div style="font-size: xx-large;" class="mx-3">More</div>
-                </a>
             </ul>
         </div>
 
