--- a/PCHUBStore/Views/Shared/_Layout.cshtml
+++ b/PCHUBStore/Views/Shared/_Layout.cshtml
@@ -176,16 +176,16 @@
                     <h6 class="text-uppercase font-weight-bold">Products</h6>
                     <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                     <p>
-                        <a href="#!">Laptops</a>
+                        <a href="/Products/Laptops">Laptops</a>
                     </p>
                     <p>
-                        <a href="#!">Mice</a>
+                        <a href="/Products/Mice">Mice</a>
                     </p>
                     <p>
-                        <a href="#!">Keyboards</a>
+                        <a href="/Products/Keyboards">Keyboards</a>
                     </p>
                     <p>
-                        <a href="#!">Monitors</a>
+                        <a href="/Products/Monitors">Monitors</a>
                     </p>
 
                 </div>
@@ -219,7 +219,9 @@
                     <p>
                         <a href="#!">Chat</a>
                     </p>
-
+                    <p>
+                        <a href="#!">FAQ</a>
+                    </p>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
