--- a/PCHUBStore/Areas/Administration/Views/Shared/_Layout.cshtml
+++ b/PCHUBStore/Areas/Administration/Views/Shared/_Layout.cshtml
@@ -57,14 +57,32 @@
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
                     <div style="font-size: 10px" class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Utilities:</h6>
-                        <a class="collapse-item" href="utilities-color.html">Edit User Index Page</a>
-                        <a class="collapse-item" href="utilities-border.html">Create New Category</a>
-                        <a class="collapse-item" href="utilities-animation.html">Create New Product For Category</a>
-                        <a class="collapse-item" href="utilities-other.html">Create New Admin Account</a>
-                        <a class="collapse-item" href="utilities-other.html">Create New Worker Account</a>
-                        <a class="collapse-item" href="utilities-other.html">Insert Html Decoration For Product</a>
-                        <a class="collapse-item" href="utilities-other.html">Insert Product As Json</a>
-                       
+
+                        <a class="collapse-item" asp-area="Administration" asp-controller="Blacksmith" asp-action="EditUserIndexPage">Edit User Index Page</a>
+
+                        <a class="collapse-item" asp-area="Administration" asp-controller="Blacksmith" asp-action="EditUserCategoryPage">Edit User Category Page</a>
+
+                        <a class="collapse-item" asp-area="Administration" asp-controller="Products" asp-action="CreateCategory">Create New Category</a>
+
+                        <a class="collapse-item" asp-area="Administration" asp-controller="Products" asp-action="CreateProduct">Create New Product For Category</a>
+
+                        <a class="collapse-item" asp-area="Administration" asp-controller="Filters" asp-action="CreateBasicFilters">Create Basic Filters For Category</a>
+
+                        <a class="collapse-item" asp-area="Administration" asp-controller="Filters" asp-action="CreateFilterCategory">Create New Filter Category</a>
+
+                        <a class="collapse-item" href="">Create New Admin Account</a>
+
+                        <a class="collapse-item" href="">Create New Worker Account</a>
+
+                        <a class="collapse-item" asp-area="Administration" asp-controller="Products" asp-action="InsertJsonProduct">Insert Product As Json</a>
+
+                        <a class="collapse-item" href="">Open Ticket</a>
+
+                        <a class="collapse-item" asp-area="Administration" asp-controller="Characteristics" asp-action="Create">Create Characteristics Template</a>
+
+                        <a class="collapse-item" asp-area="Administration" asp-controller="Characteristics" asp-action="CreateCategory">Create Characteristics Category</a>
+
+                        <a class="collapse-item" asp-area="Administration" asp-controller="Filters" asp-action="UpdateFilterCategory">Update Filters Category</a>
                     </div>
                 </div>
             </li>
@@ -85,32 +103,32 @@
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Website Pages:</h6>
-                        <a class="collapse-item" href="login.html">User Index</a>
-                        <a class="collapse-item" href="register.html">Laptops</a>
-                        <a class="collapse-item" href="forgot-password.html">Monitors</a>
-                        <a class="collapse-item" href="404.html">Computers</a>
-                        <a class="collapse-item" href="blank.html">Mice</a>
-                        <a class="collapse-item" href="blank.html">Keyboards</a>
-                        <a class="collapse-item" href="blank.html">All Users</a>
-                        <a class="collapse-item" href="blank.html">All Workers</a>
+                        <h6 class="collapse-header">Products Pages:</h6>
+                        <a class="collapse-item" href="/">User Index</a>
+                        <a class="collapse-item" href="/Products/Laptops">Laptops</a>
+                        <a class="collapse-item" href="/Products/Monitors">Monitors</a>
+                        <a class="collapse-item" href="/Products/Computers">Computers</a>
+                        <a class="collapse-item" href="/Products/Mice">Mice</a>
+                        <a class="collapse-item" href="/Products/Keyboards">Keyboards</a>
+                        <div class="collapse-divider"></div>
+                        <h6 class="collapse-header">Category Pages:</h6>
+                        <a class="collapse-item" href="/Category/Keyboards">Category Keyboards</a>
+                        <a class="collapse-item" href="/Category/Mice">Category Mice</a>
+                        <a class="collapse-item" href="/Category/Computers">Category Computers</a>
+                        <a class="collapse-item" href="/Category/Monitors">Category Monitors</a>
+                        <a class="collapse-item" href="/Category/Laptops">Category Laptops</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Other Pages:</h6>
+                        <a class="collapse-item" href="">All Users</a>
+                        <a class="collapse-item" href="">All Workers</a>
+                        <div class="collapse-divider"></div>
+                        <h6 class="collapse-header">Charts:</h6>
                         <a class="collapse-item" href="blank.html">Users Activity</a>
                         <a class="collapse-item" href="blank.html">Products Activity</a>
-                        <a class="collapse-item" href="blank.html">Monthly Schedule</a>
                         <a class="collapse-item" href="blank.html">Workers Activity</a>
                         <a class="collapse-item" href="blank.html">Orders</a>
                     </div>
                 </div>
-            </li>
-
-            <!-- Nav Item - Charts -->
-            <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Charts</span>
-                </a>
             </li>
 
             <!-- Nav Item - Tables -->
@@ -155,36 +173,25 @@
                         </div>
                     </form>
 
-
                     <div class="nav-item dropdown no-arrow">
-                        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
-                            <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
+                        <a class="nav-link dropdown-toggle" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span id="layoutName" class="mr-2 d-none d-lg-inline text-gray-600 small"></span>
+                            <img id="layoutPicture" class="img-profile rounded-circle" src="https://dndf.business/wp-content/uploads/2014/07/765-default-avatar-530x500.png">
                         </a>
                         <!-- Dropdown - User Information -->
                         <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" asp-action="Profile" asp-controller="Account" asp-area="Administration">
                                 <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                 Profile
                             </a>
-                            <a class="dropdown-item" href="#">
-                                <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                Settings
-                            </a>
-                            <a class="dropdown-item" href="#">
-                                <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                                Activity Log
-                            </a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                            <a class="dropdown-item" asp-action="LogOut" asp-controller="Account" asp-area="Administration">
                                 <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                 Logout
                             </a>
                         </div>
                     </div>
                 </nav>
-
-
                 @RenderBody();
             </div>
         </div>
@@ -205,7 +212,7 @@
 
     <!-- Page level plugins -->
     <script src="~/vendor/chart.js/Chart.min.js"></script>
-
+    <script src="~/js/adminLayout.js"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
