Support User shipmentProduct many to many FAQ Store location Service location shopping cart 404 page Error edited product service search implemented

--- a/PCHUBStore/Areas/Administration/Views/Blacksmith/CreateAdminAccount.cshtml
+++ b/PCHUBStore/Areas/Administration/Views/Blacksmith/CreateAdminAccount.cshtml
@@ -12,7 +12,7 @@
         <!-- Nested Row within Card Body -->
 
             <div class="text-center">
-                <h1 class="h4 text-gray-900 mb-4">Create New Admin Account!</h1>
+                <h1 class="h4 text-gray-900 mb-4">@ViewData["Title"]!</h1>
             </div>
             <form method="post" class="text-center">
                 <div asp-validation-summary="All" class="text-danger"></div>
