--- a/PCHUBStore/Areas/Administration/Views/Partials/_IndexPartial.cshtml
+++ b/PCHUBStore/Areas/Administration/Views/Partials/_IndexPartial.cshtml
@@ -18,13 +18,13 @@
                 <a asp-area="Administration" asp-controller="Filters" asp-action="CreateBasicFilters" style="color: white">Create Basic Filters For Category</a>
             </div>
             <div class="col-3 border-left bg-gradient-primary">
-                <a asp-area="Administration" asp-controller="Filters" asp-action="CreateFilterCategory" style="color: white">Create New Filter Category</a>
+                <a asp-area="Administration" asp-controller="Filters" asp-action="CreateFilterCategory" style="color: white">Add Sub View To Category</a>
             </div>
             <div class="col-3 border-left bg-gradient-primary">
                 <a asp-area="Administration" asp-controller="Blacksmith" asp-action="CreateAdminAccount" style="color: white">Create New Admin Account</a>
             </div>
             <div class="col-3 border-left bg-gradient-primary">
-                <a href="" style="color: white">Create New Worker Account</a>
+                <a asp-area="Administration" asp-controller="Blacksmith" asp-action="CreateSupportAccount" style="color: white">Create New Support Account</a>
             </div>
             <div class="col-3 border-left bg-gradient-primary">
                 <a asp-area="Administration" asp-controller="Products" asp-action="InsertJsonProduct" style="color: white">Insert Product As Json</a>
