--- a/PCHUBStore/Views/Products/Product.cshtml
+++ b/PCHUBStore/Views/Products/Product.cshtml
@@ -1,10 +1,8 @@
 ﻿@model PCHUBStore.View.Models.ProductFullCharacteristicsViewModel
 
 @{
-    ViewData["Title"] = "Laptop " + Model.Model;
+    ViewData["Title"] = Model.Category + " " + Model.Model;
 }
-
-<!-- Basic Desctiption for the laptop -->
 
 <div class="row" style="margin-left: 3em; margin-right:3em; margin-top: 75px">
     <div class="col-lg-8 col-sm-12">
