--- a/PCHUBStore/Views/ShoppingCart/EmptyCart.cshtml
+++ b/PCHUBStore/Views/ShoppingCart/EmptyCart.cshtml
@@ -14,8 +14,23 @@
     <img src="~/img/Empty_Shopping_Cart_blog.jpg" style="width: inherit" alt="Alternate Text" />
 
     <div class="row">
-        <div class="col">
+        <div class="col-12">
             <p>Review the following categories</p>
+        </div>
+        <div class="col m-1" style="background-color: orangered">
+            <a href="/Category/Laptops" style="color: white">Laptops</a>
+        </div>
+        <div class="col m-1" style="background-color: orange">
+            <a href="/Category/Monitors" style="color: white">Monitors</a>
+        </div>
+        <div class="col m-1" style="background-color: cornflowerblue">
+            <a href="/Category/Computers" style="color: white">Computers</a>
+        </div>
+        <div class="col m-1" style="background-color: darkcyan">
+            <a href="/Category/Keyboards" style="color: white">Keyboards</a>
+        </div>
+        <div class="col m-1" style="background-color: greenyellow">
+            <a href="/Category/Mice" style="color: white">Mice</a>
         </div>
     </div>
 
