--- a/PCHUBStore/Areas/Support/Views/Home/Index.cshtml
+++ b/PCHUBStore/Areas/Support/Views/Home/Index.cshtml
@@ -8,6 +8,11 @@
         <div class="col-3 bg-gradient-primary border-left">
             <a asp-area="Support" asp-controller="Forum" asp-action="CreateForumPost" style="color: white">Forum</a>
         </div>
+
+        <div class="col-3 bg-gradient-primary border-left">
+            <a asp-area="Support" asp-controller="Forum" asp-action="EditForumPosts" style="color: white">Edit Forum Posts</a>
+        </div>
+
         <div class="col-3 bg-gradient-primary border-left">
             <a asp-area="Support" asp-controller="Chat" asp-action="ChatRoom" style="color: white">Chat Room</a>
         </div>
