--- a/PCHUBStore/Views/Shared/Error.cshtml
+++ b/PCHUBStore/Views/Shared/Error.cshtml
@@ -1,10 +1,12 @@
 ﻿@model ErrorViewModel
 @{
-    ViewData["Title"] = "Error";
+    ViewData["Title"] = "404 Not Found Error";
 }
+    <div class="container text-center">
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+        <h1 class="text-danger">Error.</h1>
+        <h2 class="text-danger">An error occurred while processing your request.</h2>
+    </div>
 
 @if (Model.ShowRequestId)
 {
@@ -12,14 +14,31 @@
         <strong>Request ID:</strong> <code>@Model.RequestId</code>
     </p>
 }
+<div class="container text-center">
+    <img src="~/img/404notfound.jpg" style="width: 40em; height: 30em" alt="Alternate Text" />
+    <div class="row">
+        <div class="col-12">
+            <p>Check out our products</p>
+        </div>
+        <div class="col m-1" style="background-color: orangered">
+            <a href="/Category/Laptops" style="color: white">Laptops</a>
+        </div>
+        <div class="col m-1" style="background-color: orange">
+            <a href="/Category/Monitors" style="color: white">Monitors</a>
+        </div>
+        <div class="col m-1" style="background-color: cornflowerblue">
+            <a href="/Category/Computers" style="color: white">Computers</a>
+        </div>
+        <div class="col m-1" style="background-color: darkcyan">
+            <a href="/Category/Keyboards" style="color: white">Keyboards</a>
+        </div>
+        <div class="col m-1" style="background-color: greenyellow">
+            <a href="/Category/Mice" style="color: white">Mice</a>
+        </div>
+        <hr />
+        <div class="col-12">
+            <a class="btn btn-info" href="/Home/Index">Go To Home Page</a>
+        </div>
+    </div>
+</div>
 
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
