--- a/PCHUBStore/Views/ShoppingCart/ReviewCartAnonymous.cshtml
+++ b/PCHUBStore/Views/ShoppingCart/ReviewCartAnonymous.cshtml
@@ -39,7 +39,7 @@
                                 </td>
                                 <td>In stock</td>
                                 <td>
-                                    <input id="quantity" class="form-control" type="number" asp-for="@product.Quantity" />
+                                    <input id="quantity" class="form-control quantity" type="number" asp-for="@product.Quantity" />
                                     <a asp-action="IncreaseProductQuantityAnonymous" asp-controller="ShoppingCart" asp-route-id="@product.Id"></a>
 
                                 </td>
